--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,21 @@
   </head>
 
   <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
+    <% if seller_signed_in? %>
+        <%= link_to 'Sign Out as Seller', destroy_seller_session_path, method: :delete %> |
+      <% elsif !buyer_signed_in? %>
+        <%= link_to "Sign In as Seller", new_seller_session_path %> |
+    <% end %>
+
+    <% if buyer_signed_in? %>
+       <%= link_to 'Sign Out as Buyer', destroy_buyer_session_path, method: :delete %> |
+      <% elsif !seller_signed_in? %>
+        <%= link_to "Sign In as Buyer", new_buyer_session_path %> |
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
