--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,21 @@
-<h1>Pages#home</h1>
-<p>This is the homepage :)</p>
+<h1>This is the homepage :)</h1>
+
+<%= form_tag books_path, method: :get do %>
+  <%= text_field_tag :query,
+    params[:query],
+    class: "form-control",
+    placeholder: "Find a book"
+  %>
+  <%= submit_tag "Search", class: "btn btn-primary" %>
+<% end %>
+
+<% @books.each do |book| %>
+  <div>
+  <p>Title: <%= book.title %> </p>
+  <p>Description: <%= book.description %> </p>
+  <p>Price: $<%= book.price %> </p>
+  <p>Author: <%= book.author %> </p>
+  <p>Seller: <%= book.seller.name %> </p>
+  <hr>
+  </div>
+<% end %>
