--- a/app/views/sellers/dashboard/index.html.erb
+++ b/app/views/sellers/dashboard/index.html.erb
@@ -1,2 +1,7 @@
 <h1>Sellers::Dashboard#index</h1>
 <p>Find me in app/views/sellers/dashboard/index.html.erb</p>
+
+<p>Hello, <%= @seller.name %></p>
+<p>Your ID is <%= @seller.id %></p>
+<p>Email: <%= @seller.email %></p>
+<p>Phone: <%= @seller.phone %></p>
