--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -12,23 +12,23 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.label :title, class:"form-label" %>
+    <%= form.text_field :title, class:"form-control" %>
   </div>
 
   <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
+    <%= form.label :description, class:"form-label" %>
+    <%= form.text_area :description, class:"form-control" %>
   </div>
 
   <div class="field">
-    <%= form.label :author %>
-    <%= form.text_field :author %>
+    <%= form.label :author, class:"form-label" %>
+    <%= form.text_field :author, class:"form-control" %>
   </div>
 
   <div class="field">
-    <%= form.label :price %>
-    <%= form.text_field :price %>
+    <%= form.label :price, class:"form-label" %>
+    <%= form.text_field :price, class:"form-control" %>
   </div>
 
   <%=form.hidden_field :seller_id, value: current_seller.id %>
