--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,35 +1,38 @@
 <p id="notice"><%= notice %></p>
+<div class="container col-md-9">
+  <h1>Books</h1>
 
-<h1>Books</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Author</th>
-      <th>Price</th>
-      <th>Seller</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @books.each do |book| %>
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= book.title %></td>
-        <td><%= book.description %></td>
-        <td><%= book.author %></td>
-        <td><%= book.price %></td>
-        <td><%= book.seller_id %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th scope="col">Title</th>
+        <th scope="col">Description</th>
+        <th scope="col">Author</th>
+        <th scope="col">Price</th>
+        <th scope="col">Seller</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @books.each do |book| %>
+        <tr>
+          <td><%= book.title %></td>
+          <td><%= book.description %></td>
+          <td><%= book.author %></td>
+          <td><%= book.price %></td>
+          <td><%= book.seller.name %></td>
+          <td><%= link_to 'More information', book %></td>
+          <!--
+          <td><%= link_to 'Edit', edit_book_path(book) %></td>
+          <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          -->
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Book', new_book_path %>
+  <br>
+
+  <%= link_to 'New Book', new_book_path %>
+</div>
