--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,34 +1,17 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @book.title %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @book.description %>
-</p>
-
-<p>
-  <strong>Author:</strong>
-  <%= @book.author %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @book.price %>
-</p>
-
-<p>
-  <strong>Seller:</strong>
-  <%= @book.seller_id %>
-</p>
-
-<p>
-  <strong>Seller:</strong>
-  <%= @book.seller.name %>
-</p>
+<div class="container shadow-sm my-5  ">
+  <div class="row">
+    <div class="col-md-4">
+      <img class="img-fluid rounded-start book-cover" src="https://images.pexels.com/photos/256450/pexels-photo-256450.jpeg" alt="">
+    </div>
+    <div class="col-md-8 show-books">
+      <h2 class="card-title book-title"><%= @book.title %></h2>
+      <p class="card-text book-author"> <strong>Author:</strong> <%= @book.author %> </p>
+      <p class="card-text book-description"> <%= @book.description %> </p>
+      <h3 class="card-title book-price"> <strong>Price:</strong> <%= @book.price %> </h3>
+      <p class="card-text book-seller"> <strong>Seller:</strong> <%= @book.seller.name %> </p>
+    </div>
+  </div>
+</div>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
