--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,6 +19,11 @@
         <p class="card-text"> <%= h truncate(book.description, :length => 80) %> </p>
         <p class="card-text"><small class="text-muted"> Price: <%= book.price %> </small></p>
         <%= link_to "More information", "books/#{book.id}" %>
+        <%= form_for @order_item, remote: true do |f| %>
+          <%= f.hidden_field :book_id, :value => book.id %>
+          <%= f.hidden_field :quantity, :value => 1 %>
+          <%= f.submit "Add to Cart" %>
+        <% end %>
       </div>
     </div>
   </div>
