--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,12 +1,30 @@
-<h1>Carts#show</h1>
-<p>Find me in app/views/carts/show.html.erb</p>
+<div class="container col-8 my-5">
+  <h1 class="my-5">Shopping Cart</h1>
+
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">Qty</th>
+          <th scope="col">Book Title</th>
+          <th scope="col">Seller</th>
+          <th scope="col">Price</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @order_items.each do |item| %>
+          <tr>
+            <td> 1 </td>
+            <td><%= item.book.title %></td>
+            <td><%= item.book.seller.name %></td>
+            <td><%= number_to_currency(item.book.price) %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
 
-<% @order_items.each do |item| %>
-  <%= item.book.title %>
-  Price: <%= item.book.price %>
-  Seller: <%= item.book.seller.name %>
-  <hr>
-<% end %>
 
-Total Price: <%= current_order.total %>
+  <h2 class="d-flex justify-content-end my-5">Total Price: <%= number_to_currency(current_order.total) %></h2>
+</div>
