--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
       <div class="card-body">
         <h5 class="card-title"><%= book.title %></h5>
         <p class="card-text"> <%= h truncate(book.description, :length => 80) %> </p>
-        <p class="card-text"><small class="text-muted"> Price: <%= book.price %> </small></p>
+        <p class="card-text"><small class="text-muted"> Price: <%= number_to_currency(book.price) %> </small></p>
         <%= link_to "More information", "books/#{book.id}" %>
         <%= form_for @order_item, remote: true do |f| %>
           <%= f.hidden_field :book_id, :value => book.id %>
