added function to prevent reloading removing books from shopping cart

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -5,6 +5,6 @@
     <%= render 'carts-item' %>
   </div>
 
-  <h2 class="d-flex justify-content-end my-5">Total Price: <%= number_to_currency(current_order.total) %></h2>
+  <h2 id="total" class="d-flex justify-content-end my-5">Total Price: <%= number_to_currency(current_order.total) %></h2>
 
 </div>
