--- a/app/views/order_items/destroy.js.erb
+++ b/app/views/order_items/destroy.js.erb
@@ -1,2 +1,8 @@
 $('#cart').html("<%= escape_javascript(render('carts/cart')) %>")
 $('#cart-item').html("<%= escape_javascript(render('carts/carts-item')) %>")
+
+$('.deleteFromCart').bind('ajax:success', function() {
+    $(this).closest('tr').fadeOut();
+})
+
+$('#total').html("<%= (number_to_currency(current_order.total)) %>")
