--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,20 +23,20 @@
           <td><%= number_to_currency(book.price) %></td>
           <td><%= book.seller.name %></td>
           <td><%= link_to 'More information', book %></td>
+          <% if buyer_signed_in? %>
           <td><%= form_for @order_item, remote: true do |f| %>
                 <%= f.hidden_field :book_id, :value => book.id %>
                 <%= f.hidden_field :quantity, :value => 1 %>
                 <%= f.submit "Add to Cart" %>
               <% end %>
           </td>
+          <% else %>
+            <td></td>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
   </table>
 
   <br>
-  <div id="cart">
-    <%= render 'carts/cart' %>
-  </div>
-
 </div>
