--- a/app/views/carts/_carts-item.html.erb
+++ b/app/views/carts/_carts-item.html.erb
@@ -16,7 +16,7 @@
             <td><%= item.book.title %></td>
             <td><%= item.book.seller.name %></td>
             <td><%= number_to_currency(item.book.price) %></td>
-            <td><%=link_to "Remove", order_item_path(item), method: :delete, remote: true, class: "deleteFromCart"%></td>
+            <td><%=link_to "Remove", order_item_path(item), method: :delete, remote: true, class: "removeItem"%></td>
 
           </tr>
         <% end %>
