--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,7 +1,7 @@
 <% if notice %>
   <div class="alert alert-primary alert-dismissible fade show" role="alert">
     <%= notice %>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <button type="button" class="btn-close" data-bs-dismiss="notice" aria-label="Close"></button>
   </div>
 <% end %>
 <% if alert %>
