--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,7 +16,7 @@
 
     <tbody>
       <% @books.each do |book| %>
-        <tr>
+        <tr id="table-r">
           <td><%= book.title %></td>
           <td><%= book.description %></td>
           <td><%= book.author %></td>
@@ -27,7 +27,7 @@
           <td><%= form_for @order_item, remote: true do |f| %>
                 <%= f.hidden_field :book_id, :value => book.id %>
                 <%= f.hidden_field :quantity, :value => 1 %>
-                <%= f.submit "Add to Cart" %>
+                <%= f.submit "Add to Cart", id:"bot-#{book.id}" %>
               <% end %>
           </td>
           <% else %>
