--- a/app/views/order_items/create.js.erb
+++ b/app/views/order_items/create.js.erb
@@ -1,1 +1,3 @@
 $('#cart').html("<%= escape_javascript(render('carts/cart')) %>")
+
+document.getElementById("bot-<%= @order_item.book.id %>").remove();
