--- a/app/views/buyers/dashboard/index.html.erb
+++ b/app/views/buyers/dashboard/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Buyers::Dashboard#index</h1>
-<p>Find me in app/views/buyers/dashboard/index.html.erb</p>
+<div class="container my-5">
+  <h1 class="my-5">Buyer Dashboard</h1>
+
+  <h2> Welcome <%= @buyer.name %>! </h2>
+  Your current balance is: <h3 class="d-inline"><%= number_to_currency(@balance) %></h3>
+
+  <p class="my-5"><%= link_to "Browse Available Books", books_path %></p>
+</div>
